# FWP

./: FWP.cabal  README.md
.github/workflows/: Haskell-CI.yaml
src/Chapter3/: Folds.hs
