name:                FWP
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Entze/FWP
license:             BSD3
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          lukas@grassauer.eu
copyright:           Lukas Grassauer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chapter3.Folds
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable chapter3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FWP
  default-language:    Haskell2010

test-suite chapter3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , FWP
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Entze/chapter3
